--- a/landingpage.html
+++ b/landingpage.html
@@ -93,6 +93,11 @@
       padding: 0.75rem 2rem;
       font-size: 1.5rem;
     }
+    
+    .btn:hover{
+      background:#ffffff;
+      color: rgb(233, 10, 84);
+    }
 
   #social-media .box {
   float: left;
